force-app/main/default/objects/Quality_Assurance__c/fields/Any_Day__c.field-meta.xml
<CustomField>
    <fullName>Any_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Day</label>
    <type>Checkbox</type>
</CustomField>