force-app/main/default/objects/Quality_Assurance__c/fields/Appointment_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Change_Reason__c</fullName>
    <label>Appointment Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can No Longer Afford</fullName>
            </value>
            <value>
                <fullName>Change in Schedule/Agenda/Work</fullName>
            </value>
            <value>
                <fullName>COVID/Sick/Exposure to Illness</fullName>
            </value>
            <value>
                <fullName>Reschedule Missed Appointment</fullName>
            </value>
            <value>
                <fullName>Running Late</fullName>
            </value>
            <value>
                <fullName>Too Much Pain</fullName>
            </value>
            <value>
                <fullName>Changes to Clinician Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>