force-app/main/default/objects/Quality_Assurance__c/fields/Appointment_Change_Score__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Change_Score__c</fullName>
    <formula>Attempts_to_Reschedule_Appointment__c  +  Confirm_Appointment_Change_Details__c  +  Inquired_About_Further_Assistance__c +  Identified_Reason_for_Change__c  +  Confirms_If_there_is_a_Future_Appt__c</formula>
    <label>Appointment Change Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>