force-app/main/default/objects/Quality_Assurance__c/fields/Appointment_Change_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Change_Score_Percentage__c</fullName>
    <formula>Appointment_Change_Score__c /5</formula>
    <label>Appointment Change Score Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>