force-app/main/default/objects/Quality_Assurance__c/fields/Appointment_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Change_Type__c</fullName>
    <label>Appointment Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call to Cancel</fullName>
            </value>
            <value>
                <fullName>Call to Reschedule/ Change</fullName>
            </value>
            <value>
                <fullName>Schedule New Appointment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>