force-app/main/default/objects/Quality_Assurance__c/fields/Asked_Patient_to_Supply_Records__c.field-meta.xml
<CustomField>
    <fullName>Asked_Patient_to_Supply_Records__c</fullName>
    <label>Asked Patient to Supply Records</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>