force-app/main/default/objects/Quality_Assurance__c/fields/Attempts_to_Reschedule_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Attempts_to_Reschedule_Appointment__c</fullName>
    <label>Attempts to Reschedule Appointment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>