force-app/main/default/objects/Quality_Assurance__c/fields/Audit_By__c.field-meta.xml
<CustomField>
    <fullName>Audit_By__c</fullName>
    <label>DNU - Audit By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Center_Rep_Name</valueSetName>
    </valueSet>
</CustomField>