force-app/main/default/objects/Quality_Assurance__c/fields/Bonus_Scheduled_with_Medical_Dept__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Scheduled_with_Medical_Dept__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bonus - Scheduled with Medical Dept</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>