force-app/main/default/objects/Quality_Assurance__c/fields/Booked_An_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Booked_An_Appointment__c</fullName>
    <label>Booked An Appointment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>