force-app/main/default/objects/Quality_Assurance__c/fields/Call_Audit_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Audit_Type__c</fullName>
    <label>Call Audit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>Appointment Change</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>