force-app/main/default/objects/Quality_Assurance__c/fields/Call_Execution__c.field-meta.xml
<CustomField>
    <fullName>Call_Execution__c</fullName>
    <label>Call Execution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Level</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>