force-app/main/default/objects/Quality_Assurance__c/fields/Chief_Complaint_Details__c.field-meta.xml
<CustomField>
    <fullName>Chief_Complaint_Details__c</fullName>
    <description>Captured All Chief Complaint Details (Body Part, symptoms, duration, reoccurrence)</description>
    <inlineHelpText>Captured All Chief Complaint Details (Body Part, symptoms, duration, reoccurrence)</inlineHelpText>
    <label>Chief Complaint Details</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>