force-app/main/default/objects/Quality_Assurance__c/fields/Claim_Information_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Claim_Information_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Information Not Applicable</label>
    <type>Checkbox</type>
</CustomField>