force-app/main/default/objects/Quality_Assurance__c/fields/Claim_Information_Percent__c.field-meta.xml
<CustomField>
    <fullName>Claim_Information_Percent__c</fullName>
    <formula>(  Identified_Accident_Details__c  +  Confirm_Clam_Legal_Information__c  ) /10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Information Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>