force-app/main/default/objects/Quality_Assurance__c/fields/Claim_Information_Score__c.field-meta.xml
<CustomField>
    <fullName>Claim_Information_Score__c</fullName>
    <formula>Identified_Accident_Details__c  +  Confirm_Clam_Legal_Information__c</formula>
    <label>Claim Information Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>