force-app/main/default/objects/Quality_Assurance__c/fields/Closing_Score__c.field-meta.xml
<CustomField>
    <fullName>Closing_Score__c</fullName>
    <formula>Booked_An_Appointment__c  +  Confirmed_Appoitnemnt_Details__c  +  Asked_Patient_to_Supply_Records__c  +  New_Patient_Packet_Next_Steps__c</formula>
    <label>Closing Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>