force-app/main/default/objects/Quality_Assurance__c/fields/Closing_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Closing_Score_Percent__c</fullName>
    <formula>(Closing_Score__c  +  Bonus_Scheduled_with_Medical_Dept__c )/15</formula>
    <label>Closing Score Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>