force-app/main/default/objects/Quality_Assurance__c/fields/Confidently_Answer_Questions__c.field-meta.xml
<CustomField>
    <fullName>Confidently_Answer_Questions__c</fullName>
    <label>Confidently Answer Questions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>