force-app/main/default/objects/Quality_Assurance__c/fields/Confirm_Appointment_Change_Details__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Appointment_Change_Details__c</fullName>
    <label>Confirm Appointment Change Details</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>