force-app/main/default/objects/Quality_Assurance__c/fields/Confirm_Clam_Legal_Information__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Clam_Legal_Information__c</fullName>
    <label>Confirm Clam &amp; Legal Information</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>