force-app/main/default/objects/Quality_Assurance__c/fields/Confirmed_Appoitnemnt_Details__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Appoitnemnt_Details__c</fullName>
    <label>Confirmed Appoitnemnt Details</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>