force-app/main/default/objects/Quality_Assurance__c/fields/Confirms_If_there_is_a_Future_Appt__c.field-meta.xml
<CustomField>
    <fullName>Confirms_If_there_is_a_Future_Appt__c</fullName>
    <label>Confirms if there is a Future Appt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>