force-app/main/default/objects/Quality_Assurance__c/fields/Conservative_Initial_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Conservative_Initial_Visit_Date__c</fullName>
    <label>DNU-12/20Conservative Initial Visit Date</label>
    <type>Date</type>
</CustomField>