force-app/main/default/objects/Quality_Assurance__c/fields/Conservative_Provider__c.field-meta.xml
<CustomField>
    <fullName>Conservative_Provider__c</fullName>
    <label>DNU-12/2020-Conservative Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Providers</valueSetName>
    </valueSet>
</CustomField>