force-app/main/default/objects/Quality_Assurance__c/fields/Control_of_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Control_of_Conversation__c</fullName>
    <label>Control of Conversation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>