force-app/main/default/objects/Quality_Assurance__c/fields/Conversational__c.field-meta.xml
<CustomField>
    <fullName>Conversational__c</fullName>
    <label>Conversational</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>