force-app/main/default/objects/Quality_Assurance__c/fields/Delivery_Comprehension_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Comprehension_Percentage__c</fullName>
    <formula>( Delivery_Comprehension_Score__c ) /15</formula>
    <label>Delivery &amp; Comprehension Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>