force-app/main/default/objects/Quality_Assurance__c/fields/Delivery_Comprehension_Score__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Comprehension_Score__c</fullName>
    <formula>Positive_Energy_Tone_Enthusiasm__c  +  Confidently_Answer_Questions__c  +  Control_of_Conversation__c  +  Conversational__c +  Lack_of_Dead_Space__c +  Empathetic_Relateable__c</formula>
    <label>Delivery &amp; Comprehension Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>