force-app/main/default/objects/Quality_Assurance__c/fields/Delivery_Score__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Score__c</fullName>
    <formula>Positive_Energy_Tone_Enthusiasm__c  +  Confidently_Answer_Questions__c  +  Offered_Solutions__c  +  Control_of_Conversation__c  +  Empathetic_Relateable__c +  Lack_of_Dead_Space__c</formula>
    <label>Delivery Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>