force-app/main/default/objects/Quality_Assurance__c/fields/Discounted_Cash_Rates__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Cash_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discounted Cash Rates</label>
    <type>Checkbox</type>
</CustomField>