force-app/main/default/objects/Quality_Assurance__c/fields/DNU_Delivery_Score__c.field-meta.xml
<CustomField>
    <fullName>DNU_Delivery_Score__c</fullName>
    <label>DMU-12/2020-Delivery Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>