force-app/main/default/objects/Quality_Assurance__c/fields/Educated_Patient_of_Risk_Condition_s__c.field-meta.xml
<CustomField>
    <fullName>Educated_Patient_of_Risk_Condition_s__c</fullName>
    <label>Educated Patient of Risks &amp; Condition</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>