force-app/main/default/objects/Quality_Assurance__c/fields/Effectively_Explained_OON_benefits__c.field-meta.xml
<CustomField>
    <fullName>Effectively_Explained_OON_benefits__c</fullName>
    <label>Effectively Explained OON benefits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>