force-app/main/default/objects/Quality_Assurance__c/fields/Empathetic_Relateable__c.field-meta.xml
<CustomField>
    <fullName>Empathetic_Relateable__c</fullName>
    <label>Empathetic/Relateable</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>