force-app/main/default/objects/Quality_Assurance__c/fields/Explained_Patient_Process_at_NJSW__c.field-meta.xml
<CustomField>
    <fullName>Explained_Patient_Process_at_NJSW__c</fullName>
    <label>Explained Patient Process at NJSW</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>