force-app/main/default/objects/Quality_Assurance__c/fields/Explained_Reason_For_Call__c.field-meta.xml
<CustomField>
    <fullName>Explained_Reason_For_Call__c</fullName>
    <label>Explained Reason For Call</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>