force-app/main/default/objects/Quality_Assurance__c/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <label>General Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>