force-app/main/default/objects/Quality_Assurance__c/fields/Has_a_PT_Script__c.field-meta.xml
<CustomField>
    <fullName>Has_a_PT_Script__c</fullName>
    <label>Has a PT Script?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has PT Script</fullName>
            </value>
            <value>
                <fullName>Needs PT Script</fullName>
            </value>
            <value>
                <fullName>PT not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>