force-app/main/default/objects/Quality_Assurance__c/fields/HIPPA_Compliant__c.field-meta.xml
<CustomField>
    <fullName>HIPPA_Compliant__c</fullName>
    <label>HIPPA Compliant</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>