force-app/main/default/objects/Quality_Assurance__c/fields/Identified_Accident_Details__c.field-meta.xml
<CustomField>
    <fullName>Identified_Accident_Details__c</fullName>
    <label>Identified Accident Details</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>