force-app/main/default/objects/Quality_Assurance__c/fields/Identified_Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Identified_Reason_for_Change__c</fullName>
    <label>Identified Reason for Appointment Change</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>