force-app/main/default/objects/Quality_Assurance__c/fields/Identified_Self_Company__c.field-meta.xml
<CustomField>
    <fullName>Identified_Self_Company__c</fullName>
    <label>Identified Self &amp; Company</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>