force-app/main/default/objects/Quality_Assurance__c/fields/Inquired_About_Further_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Inquired_About_Further_Assistance__c</fullName>
    <label>Inquired About Further Assistance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>