force-app/main/default/objects/Quality_Assurance__c/fields/Insurance_Score__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Score__c</fullName>
    <description>Insurance Information Score</description>
    <formula>Medical_Insurance_Confirmed__c  +  Scubscriber_Information__c  +  Secondary_Insurance__c</formula>
    <inlineHelpText>Insurance Information Score</inlineHelpText>
    <label>Insurance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>