force-app/main/default/objects/Quality_Assurance__c/fields/Insurance_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Score_Percent__c</fullName>
    <formula>(  Medical_Insurance_Confirmed__c  +  Scubscriber_Information__c  +  Secondary_Insurance__c  ) /7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Score Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>