force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Employee__c.field-meta.xml
<CustomField>
    <fullName>Intake_Employee__c</fullName>
    <label>Intake Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_List</valueSetName>
    </valueSet>
</CustomField>