force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Excellent_Call__c.field-meta.xml
<CustomField>
    <fullName>Intake_Excellent_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNU-12/2020-Intake Excellent Call</label>
    <type>Checkbox</type>
</CustomField>