force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Needs_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Intake_Needs_Improvement__c</fullName>
    <label>DNU-12/2020-Intake Needs Improvement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monotone</fullName>
            </value>
            <value>
                <fullName>Formal Intake</fullName>
            </value>
            <value>
                <fullName>Lacks Empathy</fullName>
            </value>
            <value>
                <fullName>Lacks Offering Solutions</fullName>
            </value>
            <value>
                <fullName>Lacks Upsell</fullName>
            </value>
            <value>
                <fullName>Scheduled Incorrectly</fullName>
            </value>
            <value>
                <fullName>Missed Questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>