force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Notes__c.field-meta.xml
<CustomField>
    <fullName>Intake_Notes__c</fullName>
    <label>Intake Notes</label>
    <type>TextArea</type>
</CustomField>