force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Positive_Executions__c.field-meta.xml
<CustomField>
    <fullName>Intake_Positive_Executions__c</fullName>
    <label>DNU-12/2020-Intake Positive Executions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Tone of Voice</fullName>
            </value>
            <value>
                <fullName>Conversational</fullName>
            </value>
            <value>
                <fullName>Empathetic</fullName>
            </value>
            <value>
                <fullName>Offered Solutions</fullName>
            </value>
            <value>
                <fullName>Upsold</fullName>
            </value>
            <value>
                <fullName>Scheduled Correctly</fullName>
            </value>
            <value>
                <fullName>Asked All Questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>