force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Recommended_Services__c.field-meta.xml
<CustomField>
    <fullName>Intake_Recommended_Services__c</fullName>
    <label>DNU-12/2020-Intake Recommended Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orthopedic Spine</fullName>
            </value>
            <value>
                <fullName>Orthopedic Joint &amp; Extremity</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle Specialist</fullName>
            </value>
            <value>
                <fullName>Chiropractic</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Acupuncture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>