force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Score__c.field-meta.xml
<CustomField>
    <fullName>Intake_Score__c</fullName>
    <formula>Verified_Name_Number__c + Lead_Source__c + Chief_Complaint_Details__c + Related_to_MVA_WC__c + Previous_Provider_Treatment__c +  Previous_Diagnostic_Tests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>