force-app/main/default/objects/Quality_Assurance__c/fields/Intake_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Intake_Score_Percentage__c</fullName>
    <formula>(Intake_Score__c +   Wellness_Goals__c  +  Occupation_Employeer_of_Patient__c )/13</formula>
    <label>Intake Score Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>