force-app/main/default/objects/Quality_Assurance__c/fields/Lack_of_Dead_Space__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_Dead_Space__c</fullName>
    <label>Lack of Dead Space</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>