force-app/main/default/objects/Quality_Assurance__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Captured Lead Source</description>
    <inlineHelpText>Captured Lead Source</inlineHelpText>
    <label>Lead Source</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>