force-app/main/default/objects/Quality_Assurance__c/fields/Leveraged_Benchmarks_DxTests_Equiptment__c.field-meta.xml
<CustomField>
    <fullName>Leveraged_Benchmarks_DxTests_Equiptment__c</fullName>
    <label>Leveraged Benchmarks/DxTests/Equipment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>