force-app/main/default/objects/Quality_Assurance__c/fields/MD_Initial_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>MD_Initial_Visit_Date__c</fullName>
    <label>DNU-12/2020-MD Initial Visit Date</label>
    <type>Date</type>
</CustomField>