force-app/main/default/objects/Quality_Assurance__c/fields/MD_Provider__c.field-meta.xml
<CustomField>
    <fullName>MD_Provider__c</fullName>
    <label>DNU-12/2020-MD Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Providers</valueSetName>
    </valueSet>
</CustomField>