force-app/main/default/objects/Quality_Assurance__c/fields/Medical_Insurance_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurance_Confirmed__c</fullName>
    <description>Confirmed insurance information is correct (ID#, Group#, Phone #, subscriber)</description>
    <inlineHelpText>Confirmed insurance information is correct (ID#, Group#, Phone #, subscriber)</inlineHelpText>
    <label>Medical Insurance Confirmed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>