force-app/main/default/objects/Quality_Assurance__c/fields/Mentioned_Call_Back_Number__c.field-meta.xml
<CustomField>
    <fullName>Mentioned_Call_Back_Number__c</fullName>
    <label>Mentioned Call Back Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>