force-app/main/default/objects/Quality_Assurance__c/fields/Message_was_concise__c.field-meta.xml
<CustomField>
    <fullName>Message_was_concise__c</fullName>
    <label>Message was concise</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>