force-app/main/default/objects/Quality_Assurance__c/fields/New_Patient_Packet_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>New_Patient_Packet_Next_Steps__c</fullName>
    <label>New Patient Packet Next Steps</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>