force-app/main/default/objects/Quality_Assurance__c/fields/Occupation_Employeer_of_Patient__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Employeer_of_Patient__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Identified Occupation/Employer of Patient</description>
    <inlineHelpText>Identified Occupation/Employer of Patient</inlineHelpText>
    <label>Bonus - Occupation/Employer of Patient</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>