force-app/main/default/objects/Quality_Assurance__c/fields/Offered_Discounted_Cash_Rates__c.field-meta.xml
<CustomField>
    <fullName>Offered_Discounted_Cash_Rates__c</fullName>
    <label>Offered Discounted Cash Rates</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>