force-app/main/default/objects/Quality_Assurance__c/fields/Offered_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Offered_Solutions__c</fullName>
    <label>Offered Solutions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>