force-app/main/default/objects/Quality_Assurance__c/fields/PA_Employee__c.field-meta.xml
<CustomField>
    <fullName>PA_Employee__c</fullName>
    <label>PA Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_List</valueSetName>
    </valueSet>
</CustomField>