force-app/main/default/objects/Quality_Assurance__c/fields/PA_Excellent_Call__c.field-meta.xml
<CustomField>
    <fullName>PA_Excellent_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Excellent Call</label>
    <type>Checkbox</type>
</CustomField>