force-app/main/default/objects/Quality_Assurance__c/fields/PA_Notes__c.field-meta.xml
<CustomField>
    <fullName>PA_Notes__c</fullName>
    <label>PA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>