force-app/main/default/objects/Quality_Assurance__c/fields/PA_Positive_Execution__c.field-meta.xml
<CustomField>
    <fullName>PA_Positive_Execution__c</fullName>
    <label>PA Positive Execution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Tone of Voice</fullName>
            </value>
            <value>
                <fullName>Conversational</fullName>
            </value>
            <value>
                <fullName>Empathetic</fullName>
            </value>
            <value>
                <fullName>Offered Solutions</fullName>
            </value>
            <value>
                <fullName>Upsold</fullName>
            </value>
            <value>
                <fullName>Scheduled Correctly</fullName>
            </value>
            <value>
                <fullName>Thorough Explanation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>