force-app/main/default/objects/Quality_Assurance__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quality Assurances</relationshipLabel>
    <relationshipName>Quality_Assurances</relationshipName>
    <type>Lookup</type>
</CustomField>